--- a/HTMl-CSS-Snippets/Bg-effects.css
+++ b/HTMl-CSS-Snippets/Bg-effects.css
@@ -1,3 +1,17 @@
+/* Change the opacity of Background*/
+header::before {
+    background: url('link') no-repeat center center/cover;
+    content: "";
+    position: aboulute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.5;
+}
+
+
 /* Blur Effect */
 .bg {
     filter: blur(8px);
